@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="11"/>
+    <Version Value="12"/>
     <General>
       <Flags>
         <MainUnitHasCreateFormStatements Value="False"/>
         <MainUnitHasTitleStatement Value="False"/>
         <MainUnitHasScaledStatement Value="False"/>
+        <CompatibilityMode Value="True"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
-      <MainUnit Value="0"/>
       <Title Value="Firebird API Test Suite"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
@@ -25,7 +25,7 @@
     </PublishOptions>
     <RunParams>
       <local>
-        <CommandLineParams Value="-t 10"/>
+        <CommandLineParams Value="-t 2"/>
       </local>
       <environment>
         <UserOverrides Count="3">
@@ -38,7 +38,7 @@
       <Modes Count="1">
         <Mode0 Name="default">
           <local>
-            <CommandLineParams Value="-t 10"/>
+            <CommandLineParams Value="-t 2"/>
           </local>
           <environment>
             <UserOverrides Count="3">
